--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "test": "mocha"
   },
   "dependencies": {
-    "nan": "~0.6.0"
+    "nan": "^1.3.0"
   },
   "devDependencies": {
-    "mocha": "~1.14.0"
+    "mocha": "*"
   },
   "engines": {
     "node": ">=0.10.0"
