--- a/package.json
+++ b/package.json
@@ -30,14 +30,15 @@
   ],
   "repository": "sindresorhus/pwuid",
   "scripts": {
-    "test": "mocha"
+    "test": "xo && ava"
   },
   "dependencies": {
     "bindings": "^1.2.1",
     "nan": "^2.1.0"
   },
   "devDependencies": {
-    "mocha": "*"
+    "ava": "*",
+    "xo": "*"
   },
   "engines": {
     "node": ">=0.10.0"
