--- a/package.json
+++ b/package.json
@@ -1,50 +1,53 @@
 {
-  "name": "pwuid",
-  "version": "1.1.1",
-  "description": "getpwuid() binding - returns username, name, home directory, shell, gid from uid",
-  "keywords": [
-    "binding",
-    "native",
-    "addon",
-    "uid",
-    "gid",
-    "pw",
-    "getpwuid",
-    "posix",
-    "unix",
-    "shell",
-    "home",
-    "dir",
-    "username"
-  ],
-  "license": "MIT",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "files": [
-    "index.js",
-    "binding.gyp",
-    "binding.cc"
-  ],
-  "repository": "sindresorhus/pwuid",
-  "scripts": {
-    "test": "xo && ava"
-  },
-  "dependencies": {
-    "bindings": "^1.2.1",
-    "nan": "^2.1.0"
-  },
-  "devDependencies": {
-    "ava": "*",
-    "xo": "*"
-  },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "os": [
-    "!win32"
-  ],
-  "gypfile": true
+	"name": "pwuid",
+	"version": "1.1.1",
+	"description": "getpwuid() binding - returns username, name, home directory, shell, gid from uid",
+	"license": "MIT",
+	"repository": "sindresorhus/pwuid",
+	"funding": "https://github.com/sponsors/sindresorhus",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "https://sindresorhus.com"
+	},
+	"type": "module",
+	"exports": "./index.js",
+	"engines": {
+		"node": ">=18"
+	},
+	"os": [
+		"!win32"
+	],
+	"gypfile": true,
+	"scripts": {
+		"test": "xo && ava"
+	},
+	"files": [
+		"index.js",
+		"binding.gyp",
+		"binding.cc"
+	],
+	"keywords": [
+		"binding",
+		"native",
+		"addon",
+		"uid",
+		"gid",
+		"pw",
+		"getpwuid",
+		"posix",
+		"unix",
+		"shell",
+		"home",
+		"dir",
+		"username"
+	],
+	"dependencies": {
+		"bindings": "^1.5.0",
+		"nan": "^2.19.0"
+	},
+	"devDependencies": {
+		"ava": "^6.1.2",
+		"xo": "^0.58.0"
+	}
 }
